chore: configure publishing to github packages

--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "cue-wasm",
+  "name": "@GeoffMillerAZ/cue-wasm",
   "version": "1.0.0",
   "description": "Cuelang WASM runtime for the browser.",
   "main": "dist/index.js",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
   "types": "dist/index.d.ts",
   "repository": {
     "type": "git",
