--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,7 @@ jobs:
         uses: golangci/golangci-lint-action@v4
         with:
           version: latest
+          args: --env GOOS=js --env GOARCH=wasm
 
   test:
     name: Test (Node ${{ matrix.node-version }})
