--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,17 +10,24 @@ jobs:
   lint:
     name: Lint Go
     runs-on: ubuntu-latest
+    env:
+      GOOS: js
+      GOARCH: wasm
     steps:
       - uses: actions/checkout@v4
+      
       - uses: actions/setup-go@v5
         with:
           go-version: '1.24.4'
           cache: true
+
+      - name: Install dependencies
+        run: go mod tidy
+
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v4
         with:
           version: latest
-          args: --env GOOS=js --env GOARCH=wasm
 
   test:
     name: Test (Node ${{ matrix.node-version }})
