--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
     "node": ">=18.0.0"
   },
   "author": "Geoff Miller",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@modelcontextprotocol/server-github": "^2025.4.8",
+    "@modelcontextprotocol/server-puppeteer": "^2025.5.12"
+  }
 }
