--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "bin/wasm_exec.js"
   ],
   "scripts": {
-    "test": "npm run test:integration && npm run test:security && npm run test:examples && npm run test:edge",
+    "test": "npm run test:unit && npm run test:integration && npm run test:security && npm run test:examples && npm run test:edge",
+    "test:unit": "node test/unit/loader_logic.js",
     "test:integration": "node test/integration/test.js",
     "test:security": "node test/security/test_lfi.js",
     "test:examples": "node test/examples.js",
