--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "exports": {
     ".": "./dist/index.js",
-    "./cue.wasm": "./bin/cue.wasm"
+    "./cue.wasm": "./bin/cue.wasm",
+    "./react": "./dist/react/index.js"
   },
   "types": "dist/index.d.ts",
   "repository": {
@@ -38,11 +39,9 @@
   "engines": {
     "node": ">=18.0.0"
   },
+  "peerDependencies": {
+    "react": ">=16.8.0"
+  },
   "author": "Geoff Miller",
-  "license": "MIT",
-  "devDependencies": {
-    "@modelcontextprotocol/sdk": "^1.25.3",
-    "@modelcontextprotocol/server-github": "^2025.4.8",
-    "@modelcontextprotocol/server-puppeteer": "^2025.5.12"
-  }
+  "license": "MIT"
 }
