--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,9 @@
 name: Release
 
 on:
-  release:
-    types: [created]
+  push:
+    tags:
+      - 'v*'
 
 jobs:
   build-and-publish:
@@ -37,11 +38,12 @@ jobs:
         ./build.sh
         npm test
 
-    - name: Upload Release Assets
+    - name: Create Release and Upload Assets
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        gh release upload ${{ github.event.release.tag_name }} bin/cue.wasm bin/wasm_exec.js
+        gh release create ${{ github.ref_name }} bin/cue.wasm bin/wasm_exec.js --title "Release ${{ github.ref_name }}" --notes "Automated release for ${{ github.ref_name }}" || \
+        gh release upload ${{ github.ref_name }} bin/cue.wasm bin/wasm_exec.js --clobber
 
     - name: Publish to NPM
       env:
