--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,7 +42,10 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        gh release create ${{ github.ref_name }} bin/cue.wasm bin/wasm_exec.js --title "Release ${{ github.ref_name }}" --notes "Automated release for ${{ github.ref_name }}" || \
+        # Try to create the release, but ignore failure if it exists
+        gh release create ${{ github.ref_name }} --title "Release ${{ github.ref_name }}" --generate-notes || echo "Release already exists"
+        
+        # Upload assets, using --clobber to overwrite if they exist
         gh release upload ${{ github.ref_name }} bin/cue.wasm bin/wasm_exec.js --clobber
 
     - name: Publish to NPM
